--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
           <input placeholder="Enter Current Password" formControlName="oldPassword" type="text" tabindex="1" autofocus>
         </fieldset>
         <fieldset>
-          <input placeholder="Enter New Password" type="text" formControlName="newPassword" tabindex="2">
+          <input placeholder="Enter New Password" type="password" formControlName="newPassword" tabindex="2">
         </fieldset>
         <fieldset>
           <input placeholder="Confirm Password" type="text" tabindex="3" formControlName="confirmPassword">
