dashboard table and view application

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,6 +2,36 @@
     <div class="row mt-3">
         <div class="col-md-12 text-center">
             <h5>Dashboard</h5>
+            <p-table [columns]="cols" [value]="applications">
+                <ng-template pTemplate="header" let-columns>
+                    <tr>
+                        <th>S.No</th>
+                        <th *ngFor="let col of columns">
+                            {{col.header}}
+                        </th>
+                        <th>Actions</th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-i="rowIndex" let-rowData let-columns="columns">
+                    <tr>
+                        <td>{{i+1}}</td>
+                        <td *ngFor="let col of columns">
+                            <span *ngIf="col.header!='Verified' && col.header!='Active'">{{rowData[col.field]}}</span>
+                            <span *ngIf="col.header=='Verified'">
+                                <span *ngIf="rowData[col.field]">Verified</span>
+                                <span *ngIf="!rowData[col.field]">
+                                    <button class="btn-primary" (click)="verifyApplication(rowData._id)">Verify</button>
+                                </span>
+                            </span>
+                        </td>
+                        <td>
+                            <p-inputSwitch [(ngModel)]="rowData.isActive" (onChange)="onActiveToggle($event.checked,rowData._id)"></p-inputSwitch>
+                        <button class="btn btn-info" (click)="onView(rowData._id)">View</button>
+                        </td>
+                    </tr>
+                </ng-template>
+            </p-table>
+            <p-paginator [rows]="limit" [totalRecords]="totalApps" (onPageChange)="paginate($event)" [rowsPerPageOptions]="[10,25,50,100]"></p-paginator>
         </div>
     </div>
 </div>
