--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -134,6 +134,7 @@
         </div>
         <div class="row justify-content-center m-5">
             <button type="submit" [disabled]="!this.form.valid||!photoid_proof||!addressid_proof||!image">Submit</button>
+            <button type="reset">Cancel</button>
         </div>
     </form>
 </div>
