--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -1,6 +1,277 @@
+<div class="container-fluid mt-3">
+    <div class="row justify-content-center">
+        <h4 class="mb-3 text-center">Registration Form</h4>
+        <span class="shape"></span>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                <div class="card application">
+                    <h5 class="text-left mb-3">Personal Information</h5>
+                    <div class="row">
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <label>First Name <span class="text-danger">*</span></label>
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <fieldset>
+                                <input type="text" formControlName="firstName" class="form-control" placeholder="">
+                            </fieldset>
+
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <label>Middle Name <span class="text-danger">*</span></label>
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <fieldset>
+                                <input type="text" formControlName="middleName" class="form-control" placeholder="">
+                            </fieldset>
+                        </div>
+
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <label>Last Name <span class="text-danger">*</span></label>
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <fieldset>
+                                <input type="text" formControlName="lastName" class="form-control" placeholder="">
+                            </fieldset>
+                        </div>
+
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <label>Father Name <span class="text-danger">*</span></label>
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <fieldset>
+                                <input type="text" formControlName="fatherName" class="form-control" placeholder="">
+                            </fieldset>
+                        </div>
+
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <label>Mother Name <span class="text-danger">*</span></label>
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <fieldset>
+                                <input type="text" formControlName="motherName" class="form-control" placeholder="">
+                            </fieldset>
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <label>Date of Birth <span class="text-danger">*</span></label>
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <fieldset>
+                                <input placeholder="Select DOB" class="textbox-n form-control" type="text" onmouseout="(this.type='text')" onmouseover="(this.type='date')" onkeydown="event.preventDefault()" formControlName="dob">
+                            </fieldset>
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <label>Email <span class="text-danger">*</span></label>
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <fieldset>
+                                <input type="email" formControlName="email" class="form-control" placeholder="">
+                            </fieldset>
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <label>Phone Number <span class="text-danger">*</span></label>
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <fieldset>
+                                <input type="number" formControlName="mobile" class="form-control" placeholder="">
+                            </fieldset>
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <label>Highest Qualification <span class="text-danger">*</span></label>
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <fieldset>
+                                <select formControlName="highestQualification" class="form-control">
+                                    <option value="" disabled selected>Select Highest Qualification</option>
+                                    <option *ngFor="let e of hqsdd" [value]=e>{{e}}</option>
+                                </select>
+                            </fieldset>
+                        </div>
+
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <label>Select Emplopyment Type<span class="text-danger">*</span></label>
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <fieldset>
+                                <select class="form-control" (change)="onEmpType($event)">
+                                    <option value="" disabled selected>Select Emplopyment Type</option>
+                                    <option *ngFor="let et of employmentTypes" [value]=et._id>{{et.name}}</option>
+                                </select>
+                            </fieldset>
+                        </div>
+
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <label>Select Emplopyment Sub Type<span class="text-danger">*</span></label>
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <fieldset>
+                                <select class="form-control" formControlName="employmentsubtype">
+                                    <option value="" disabled selected>Select Emplopyment Sub Type</option>
+                                    <option *ngFor="let est of employmentSubTypes" [value]=est._id>{{est.name}}</option>
+                                </select>
+                            </fieldset>
+                        </div>
+                        <div formGroupName="address" class="col-md-12">
+                            <div class="row">
+                                <div class="col-md-3 col-sm-12 col-xs-12">
+                                    <label>Pincode <span class="text-danger">*</span></label>
+                                </div>
+                                <div class="col-md-3 col-sm-12 col-xs-12">
+                                    <fieldset>
+                                        <input type="number" formControlName="pin" class="form-control" placeholder="" (keyup)="onPin($event)">
+                                    </fieldset>
+                                </div>
+
+                                <div class="col-md-3 col-sm-12 col-xs-12" *ngIf="isValidPin">
+                                    <label>State <span class="text-danger"></span></label>
+                                </div>
+                                <div class="col-md-3 col-sm-12 col-xs-12" *ngIf="isValidPin">
+                                    <fieldset>
+                                        <input type="text" readonly formControlName="state" class="form-control" placeholder="">
+                                    </fieldset>
+                                </div>
+
+                                <div class="col-md-3 col-sm-12 col-xs-12" *ngIf="isValidPin">
+                                    <label>District <span class="text-danger"></span></label>
+                                </div>
+                                <div class="col-md-3 col-sm-12 col-xs-12" *ngIf="isValidPin">
+                                    <fieldset>
+                                        <input type="text" readonly formControlName="district" class="form-control" placeholder="">
+                                    </fieldset>
+                                </div>
+
+                                <div class="col-md-3 col-sm-12 col-xs-12" *ngIf="isValidPin">
+                                    <label>Circle <span class="text-danger"></span></label>
+                                </div>
+                                <div class="col-md-3 col-sm-12 col-xs-12" *ngIf="isValidPin">
+                                    <fieldset>
+                                        <input type="text" readonly formControlName="circle" class="form-control" placeholder="">
+                                    </fieldset>
+                                </div>
+
+                                <div class="col-md-3 col-sm-12 col-xs-12" *ngIf="isValidPin">
+                                    <label>Address Line 1 <span class="text-danger"></span></label>
+                                </div>
+                                <div class="col-md-3 col-sm-12 col-xs-12" *ngIf="isValidPin">
+                                    <fieldset>
+                                        <input type="text" formControlName="line1" class="form-control" placeholder="">
+                                    </fieldset>
+                                </div>
+
+                                <div class="col-md-3 col-sm-12 col-xs-12" *ngIf="isValidPin">
+                                    <label>Address Line 2 <span class="text-danger"></span></label>
+                                </div>
+                                <div class="col-md-3 col-sm-12 col-xs-12" *ngIf="isValidPin">
+                                    <fieldset>
+                                        <input type="text" formControlName="line2" class="form-control" placeholder="">
+                                    </fieldset>
+                                </div>
+
+                                <div class="col-md-3 col-sm-12 col-xs-12" *ngIf="isValidPin">
+                                    <label>Landmark <span class="text-danger"></span></label>
+                                </div>
+                                <div class="col-md-3 col-sm-12 col-xs-12" *ngIf="isValidPin">
+                                    <fieldset>
+                                        <input type="text" formControlName="landMark" class="form-control" placeholder="">
+                                    </fieldset>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="card application">
+                    <div class="row">
+                        <div formArrayName="qualifications" class="col-md-12">
+                            <div class="col-md-12 text-center justify-content-center">
+                                <h5 class="text-left">Education Qualification</h5>
+                            </div>
+                            <div class="text-right">
+                                <button (click)="addQualification()" class="add">Add More</button>
+                            </div>
+                            <div *ngFor="let q of qualifications().controls; index as i" [formGroupName]="i">
+                                <div class="row col-md-12">
+                                    <div class="col-3">
+                                        <input type="text" formControlName="school" class="form-control" placeholder="School">
+                                    </div>
+                                    <div class="col-2">
+                                        <input type="text" formControlName="degree" class="form-control" placeholder="Degree">
+                                    </div>
+                                    <div class="col-2">
+                                        <input type="text" formControlName="field" class="form-control" placeholder="Field">
+                                    </div>
+                                    <div class="col-2">
+                                        <input type="text" formControlName="startYear" class="form-control" placeholder="Start Year">
+                                    </div>
+                                    <div class="col-2">
+                                        <input type="text" formControlName="endYear" class="form-control" placeholder="End Year">
+                                    </div>
+                                    <div class="col-1" *ngIf="i!=0">
+                                        <mat-icon (click)="removeQualification(i)" class="pointer">close</mat-icon>
+                                        <!-- <button (click)="removeQualification(i)" class="form-control">Remove</button> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card application">
+                    <div class="row col-md-12 align-items-baseline">
+                        <div class="col-md-3 mt-auto">
+                            <label> Photo Id</label>
+                        </div>
+                        <div class="col-md-3">
+                            <input type="text" formControlName="photoid_proof" class="form-control" placeholder="Photoid Proof">
+                        </div>
+                        <div class="col-md-3 mt-auto">
+                            <input type="file" class="form-control" accept='image/*' (change)="onFileUpload($event.target.files,'photoid_proof')">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card application">
+                    <div class="row col-md-12 align-items-baseline">
+                        <div class="col-md-3 mt-auto">
+                            <label> Address Id</label>
+                        </div>
+                        <div class="col-md-3">
+                            <input type="text" formControlName="addressid_proof" class="form-control" placeholder="AddressId Proof">
+                        </div>
+                        <div class="col-md-3 mt-auto">
+                            <input type="file" class="form-control" accept='image/*' (change)="onFileUpload($event.target.files,'addressid_proof')">
+                        </div>
+                    </div>
+                </div>
+                <div class="card application">
+                    <div class="row col-md-12 align-items-baseline">
+                        <div class="col-md-3">
+                            <label>Image</label>
+                        </div>
+                        <div class="col-md-3 mt-auto">
+                            <input type="file" class="form-control" accept='image/*' (change)="onFileUpload($event.target.files,'image')">
+                        </div>
+                        <div class="col-md-3">
+                            <label>CV</label>
+                        </div>
+                        <div class="col-md-3 mt-auto">
+                            <input type="file" class="form-control" accept=".doc, .docx,.pdf" (change)="onFileUpload($event.target.files,'cv')">
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center m-5 app">
+                    <button type="submit" [disabled]="!this.form.valid||!photoid_proof||!addressid_proof||!image">Submit</button>
+                    <button type="reset" class="ml-3">Cancel</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 <div class="container-fluid">
 
-    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <!-- <form [formGroup]="form" (ngSubmit)="onSubmit()">
         <div class="row">
             <div class="col-3">
                 <input type="text" formControlName="firstName" class="form-control" placeholder="First Name">
@@ -136,5 +407,5 @@
             <button type="submit" [disabled]="!this.form.valid||!photoid_proof||!addressid_proof||!image">Submit</button>
             <button type="reset">Cancel</button>
         </div>
-    </form>
+    </form> -->
 </div>
