--- a/src/app/subtypes/subtypes.component.css
+++ b/src/app/subtypes/subtypes.component.css
@@ -79,3 +79,6 @@ fieldset {
 .subtype button[type="submit"]:active {
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
 }
+.cust-padding{
+  padding: 5px;
+}
