--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -57,7 +57,7 @@
                         </div>
                         <div class="col-md-3 col-sm-12 col-xs-12">
                             <fieldset>
-                                <input placeholder="Select DOB" class="textbox-n form-control" type="text" onmouseout="(this.type='text')" onmouseover="(this.type='date')" onkeydown="event.preventDefault()" formControlName="dob">
+                                <input placeholder="Select DOB" class="textbox-n form-control" type="date" formControlName="dob">
                             </fieldset>
                         </div>
                         <div class="col-md-3 col-sm-12 col-xs-12">
